# basin

./: .gitignore  CMakeLists.txt  README.md  build.bat  game.data  game.html  game.html.mem  game.js  run.bat  text_adventure.md  todo.md
assets/: .tileset.kra-autosave.kra  face.kra  level.csv  level.tmx  map.tmx  mountain.kra  safari_guy.kra  tileset.kra  tileset.kra~
assets/gfx/: .sliding_door.png-autosave.kra  .steven.png-autosave.kra  battery.png~  player.kra  player.kra~  sliding_door_vert.png~  steven.kra
assets/lvl/: level_background.csv  level_base.csv  level_collectables.csv  level_collision.csv  level_foreground.csv  level_infos.csv  map_background.csv  map_collectables.csv  map_collision.csv  map_darkness.csv  map_foreground.csv  map_hidden.csv  map_infos.csv  map_maze.csv
src/: battery.cpp  battery.hpp  blockade.cpp  blockade.hpp  boss.cpp  boss.hpp  boulder.cpp  boulder.hpp  collectable.cpp  collectable.hpp  computer.cpp  computer.hpp  computer_room_wall.cpp  computer_room_wall.hpp  config.hpp  enemy.cpp  enemy.hpp  fake_panel.cpp  fake_panel.hpp  floorboard.cpp  floorboard.hpp  game.cpp  game.hpp  info.cpp  info.hpp  jumper.cpp  jumper.hpp  main.cpp  menu.cpp  menu.hpp  player.cpp  player.hpp  sliding_door.cpp  sliding_door.hpp  switchboard.cpp  switchboard.hpp  torch.cpp  torch.hpp
src/e/: camera.cpp  camera.hpp  collision.cpp  collision.hpp  component.hpp  core.cpp  core.hpp  csv.cpp  csv.hpp  entity.cpp  entity.hpp  group.cpp  group.hpp  input.cpp  input.hpp  math_util.cpp  math_util.hpp  point.cpp  point.hpp  rect.cpp  rect.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  scene.hpp  sprite.cpp  sprite.hpp  spritesheet.cpp  spritesheet.hpp  text.cpp  text.hpp  tilelayer.cpp  tilelayer.hpp  tilemap.cpp  tilemap.hpp  tileset.cpp  tileset.hpp  timer.cpp  timer.hpp
